--- a/views/productDetails.ejs
+++ b/views/productDetails.ejs
@@ -260,7 +260,7 @@ bootbox.dialog({
 	<div id="why2buy">
 		<div class="w2b w2bsls">
     		<div class="w2b-cnt w2b-2 w2b-red"><span class="w2b-sgl">Hassle-free returns</span></div>
-        	<div class="w2b-cnt w2b-2 w2b-brdr"><span class="w2b-sgl">100% positive feedback</span></div>
+        	<div class="w2b-cnt w2b-2 w2b-brdr"><span class="w2b-sgl">Expedited Shipping</span></div>
         </div>
 	</div>
 	<div class="vi-bbox-dspn u-cb spcr"></div>
@@ -274,7 +274,7 @@ bootbox.dialog({
 					<a href="/seller/<%=sellerDetails[0].seller_id%>"><span class="mbg-nw"><%=sellerDetails[0].person_email%></span></a> (<%=sellerDetails[0].noOfProductsSold%>&nbsp;
 					<span class="vi-mbgds3-bkImg vi-mbgds3-bigStar" alt="feedback score: 15517" title="feedback score: 15517"></span>)
 					<br>
-					<div id="si-fb">100%&nbsp;Positive feedback</div>
+					<div id="si-fb">Good Positive feedback</div>
 					<div class="si-rlDot"></div>
 					<div class="si-ss-eu">					
 					<div class="u-flL si-ss-lbl " id="" style="">
